[metadata]
description-file = README.md
author = Tomasz Urbaszek
author-email = turbaszek@apache.org
license = Apache License, Version 2.0
license_files =
   LICENSE

[bdist_wheel]
python-tag=py3

[isort]
line_length=110
combine_as_imports = true
default_section = THIRDPARTY
known_first_party=tests
# Need to be consistent with the exclude config defined in pre-commit-config.yaml
skip=build,.tox,venv
profile = black
