[metadata]
name = lss
description = Step sequencer based on Novation Launchpad
description-file = README.md
long_description = file: README.md
long_description_content_type = text/markdown
author = Tomasz Urbaszek
author-email = turbaszek@apache.org
license = Apache License, Version 2.0
license_files =
   LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: MacOS X
    Framework :: AsyncIO
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Artistic Software
    Topic :: Multimedia :: Sound/Audio :: Capture/Recording
    Topic :: Multimedia :: Sound/Audio :: MIDI
    Topic :: Multimedia :: Sound/Audio :: Sound Synthesis

[options]
zip_safe = False
include_package_data = True
python_requires = ~=3.8
packages = find:
setup_requires =
    gitpython
    wheel
install_requires =
   click>=7.1.2
   mido>=1.2.10
   python-rtmidi>=1.4.9

[options.entry_points]
console_scripts=
    lss = lss.__main__:main

[bdist_wheel]
python-tag=py3

[isort]
line_length=110
combine_as_imports = true
default_section = THIRDPARTY
known_first_party=tests
# Need to be consistent with the exclude config defined in pre-commit-config.yaml
skip=build,.tox,venv
profile = black
